# scoring_p7_opc

./: README.md  Untitled.ipynb  api.py  data_drift_report.html  data_test.csv  data_train.csv  pyproject.toml  requirements.txt  test_api.ipynb  test_api.py  utils.py
.github/workflows/: ci.yml  render.yaml
.ipynb_checkpoints/: api-checkpoint.py  pyproject-checkpoint.toml
