[tool.poetry]
name = "sc"
version = "0.1.0"
description = ""
authors = ["Votre Nom"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
pandas = "^2.2.3"
numba = "^0.58.0"  # Version mise à jour pour supporter numpy 1.26
ipykernel = "^6.29.5"
llvmlite = "^0.41.0"  # Mise à jour pour correspondre à numba 0.58
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
plotly = "^6.0.0"
mlflow = "^2.20.2"
missingno = "^0.5.2"
lightgbm = "^4.6.0"
pytest = "^8.3.4"
fastapi = "^0.115.8"
imbalanced-learn = "^0.13.0"
xgboost = "^2.1.4"
uvicorn = "^0.34.0"
shap = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
